# plexy

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/: main.py
src/cli/: main.py
src/core/: __init__.py  agent.py  config.py  decision.py  logger.py  tool_registry.py
src/models/: base.py  openai.py
src/tools/: __init__.py  pipeline_helpers.py  web_search.py
