[tool.poetry]
name = "plexy"
version = "0.1.0"
description = "Plexy: A CLI-based AI assistant with iterative search/answer pipelines."
authors = ["Sanjay Nadhavajhala <sanjay.nadhavajhala@gmail.com>"]
packages = [
    { include = "core", from = "src" },
    { include = "models", from = "src" },
    { include = "tools", from = "src" },
    { include = "cli", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.61.0"
cohere = "^5.13.11"
tavily-python = "^0.5.0"
rich = "^13.9.4"
redis = "^5.2.1"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pydantic = "^2.10.6"
pytest = "^8.3.4"
click = "^8.1.8"

[tool.poetry.scripts]
plexy = "cli.main:plexy"
